--- a/README.Rmd
+++ b/README.Rmd
@@ -152,8 +152,6 @@ directly by the compiler and cannot be redefined or passed as values.
 - `and`, `or` - Short-circuit boolean operators
 - `while` - Loop with condition
 - `delay` - Lazy promise creation
-- `load` - Load and evaluate a file
-- `run` - Run a file in an isolated environment
 - `import` - Import a module's exports
 - `module` - Define a module with exports
 - `~` - Formula (for R modeling)
@@ -162,7 +160,7 @@ directly by the compiler and cannot be redefined or passed as values.
 
 In addition to special forms, Arl provides a small set of **built-in
 functions** implemented in R and available before any stdlib modules load (and
-if stdlib loading is disabled): `eval`, `read`, `write`, `gensym`, `capture`,
+if stdlib loading is disabled): `eval`, `read`, `write`, `load`, `gensym`, `capture`,
 `macro?`, `macroexpand`, `pair?`, `promise?`, `force`, `promise-expr`,
 `toplevel-env`, `current-env`, `r/eval`, `doc`, and `doc!`. Unlike special
 forms, these are ordinary functions and can be passed as values.
@@ -245,11 +243,13 @@ individually in your own modules or when working with a bare engine
 ### Modules and File Loading
 
 - `(load "file.arl")` -- run a file in the current environment (definitions visible)
+- `(load "file.arl" env)` -- run a file in the specified environment
 - `(run "file.arl")` -- run a file in an isolated child environment
 - `(import M)` -- load module M and attach its exports to the current scope
 
 From R: `engine$load_file_in_env(path)` corresponds to `load`;
-`engine$load_file_under_env(path)` corresponds to `run`. See the
+`engine$load_file_in_env(path, new.env(parent = engine$get_env()))`
+corresponds to `run`. See the
 [Modules and Imports](articles/modules.html) guide for defining your own
 modules.
 
